--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27471,3 +27471,7 @@ readers do not read off random characters that represent icons */
   font-family: "Font Awesome 5 Brands";
 }
 
+.router-link-exact-active {
+  background-color: #201f7c;
+}
+
